--- a/src/app/pages/usuarios/usuarios.page.html
+++ b/src/app/pages/usuarios/usuarios.page.html
@@ -8,14 +8,23 @@
     </ion-toolbar>
   </ion-header>
   <ion-content>
+    
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{ listUsers }}</ion-card-title>
+        <ion-card-subtitle></ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content></ion-card-content>
+    </ion-card>
 
-    <ion-card *ngFor="let item of items">
+
+    <!-- <ion-card *ngFor="let item of items">
       <ion-card-header>
         <ion-card-title>{{ item.title}}</ion-card-title>
         <ion-card-subtitle></ion-card-subtitle>
       </ion-card-header>
       <ion-card-content></ion-card-content>
-    </ion-card>
+    </ion-card> -->
 
     <ion-fab horizontal="end" vertical="bottom" slot="fixed">
       <ion-fab-button>
